change bakery name

--- a/menu.html
+++ b/menu.html
@@ -5,14 +5,14 @@
     <meta name="author" content="Jesse Flores">
     <meta name="description" content="Learn about our bakery and view our menu which includes a wide selection of products.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Loafy Bread</title>
+    <title>Tim's Bake n Bake</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-- Page header -->
     <header>
         <nav class="navbar">
-          <a class="navbar__home" href="./index.html">Loafy Bread</a>
+          <a class="navbar__home" href="./index.html">Tim's Bake n Bake</a>
           <button class="navbar__menubtn" type="button" name="button">
             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
               <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
@@ -20,7 +20,7 @@
           </button>
           <div class="navbar__options">
             <ul class="navbar__list">
-              <li class="navbar__item"><a href="./index.html">About</a></li>
+              <li class="navbar__item"><a href="./index.html#mission">About</a></li>
               <li class="navbar__item active"><a href="#">Menu</a></li>
               <li class="navbar__item"><a href="#info">Contact</a></li>
             </ul>
@@ -184,7 +184,7 @@
           </a>
         </div>
       </div>
-      <span>&copy; 2021 Jesse Flores</span>
+      <span>&copy; 2022 Jesse Flores</span>
     </footer>
 
     <script src="js/script.js"></script>
